--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,5 @@
-
+<!DOCTYPE html>
+<html lang="pt-br>"
+ <head>
+     <meta charset="UTF-8
+    <title> pensamento computacional 1⁰ series NEM </title>
