--- a/Index.html
+++ b/Index.html
@@ -2,4 +2,4 @@
 <html lang="pt-br>"
  <head>
      <meta charset="UTF-8
-    <title> pensamento computacional 1⁰ series NEM </title>
+    <title> barbearia  1⁰ series NEM </title>
